--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Ryan Daulton <rldaulton@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev:charge": "node ./Charge\\ Customer/index.js"
+    "dev:charge": "node ./charge-customer/index.js"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
