--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "http": "^0.0.0",
+    "prettier": "^1.16.1",
     "stripe": "^6.22.0"
   }
 }
