--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "index.js",
   "repository": "git@github.com:okkur/syna-stripe-gcf.git",
-  "author": "Ryan Daulton <rldaulton@gmail.com>",
+  "author": "Syna Authors <syna@okkur.io>",
   "license": "MIT",
   "scripts": {
     "dev:charge": "node ./charge-customer/index.js"
